--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,4 +11,6 @@ test = []
 [dependencies]
 anyhow = "1.0.75"
 clap = { version = "4.4.4", features = ["derive"] }
-struct_iterable = "0.1.1"
+reqwest = { version = "0.11.20", features = ["json", "cookies"] }
+serde_json = "1.0.107"
+tokio = { version = "1.32.0", features = ["full"] }
