--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,4 +13,5 @@ anyhow = "1.0.75"
 clap = { version = "4.4.4", features = ["derive"] }
 reqwest = { version = "0.11.20", features = ["json", "cookies"] }
 serde_json = "1.0.107"
+strum = { version = "0.25.0", features = ["derive"] }
 tokio = { version = "1.32.0", features = ["full"] }
