--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ test = []
 [dependencies]
 anyhow = "1.0.75"
 clap = { version = "4.4.4", features = ["derive"] }
+rayon = "1.8.0"
 regex = "1.9.5"
 reqwest = { version = "0.11.20", features = ["json", "cookies"] }
 serde = { version = "1.0.188", features = ["serde_derive", "derive"] }
