--- a/lc_tui/Cargo.toml
+++ b/lc_tui/Cargo.toml
@@ -1,30 +1,12 @@
 [package]
-name = "leetcode_tracker"
+name = "lc_tui"
 version = "0.1.0"
 edition = "2021"
-default-run = "lc_cli"
-
-[workspace]
-members = ["lc_lib", "lc_cli", "lc_tui"]
-
-[lib]
-name = "lc_lib"
-path = "lc_lib/src/lib.rs"
-
-[[bin]]
-name = "lc_cli"
-path = "lc_cli/src/main.rs"
-
-[[bin]]
-name = "lc_tui"
-path = "lc_tui/src/main.rs"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-[features]
-default = []
-test = []
 
 [dependencies]
+lc_lib = { path = "../lc_lib" }
 anyhow = "1.0.75"
 clap = { version = "4.4.4", features = ["derive"] }
 rayon = "1.8.0"
