--- a/lc_tui/Cargo.toml
+++ b/lc_tui/Cargo.toml
@@ -7,12 +7,13 @@ edition = "2021"
 
 [dependencies]
 lc_lib = { path = "../lc_lib" }
-anyhow = "1.0.75"
-clap = { version = "4.4.4", features = ["derive"] }
-rayon = "1.8.0"
-regex = "1.9.5"
-reqwest = { version = "0.11.20", features = ["json", "cookies"] }
-serde = { version = "1.0.188", features = ["serde_derive", "derive"] }
-serde_json = "1.0.107"
-strum = { version = "0.25.0", features = ["derive"] }
-tokio = { version = "1.32.0", features = ["full"] }
+ratatui = { version = "0.23.0", features = ["all-widgets"] }
+crossterm = "0.27.0"
+
+regex = { workspace = true }
+reqwest = { workspace = true, features = ["json", "cookies"] }
+anyhow = { workspace = true }
+serde = { workspace = true, features = ["serde_derive", "derive"] }
+serde_json = { workspace = true }
+strum = { workspace = true, features = ["derive"] }
+tokio = { workspace = true, features = ["full"] }
