--- a/lc_lib/Cargo.toml
+++ b/lc_lib/Cargo.toml
@@ -11,6 +11,7 @@ clap = { version = "4.4.4", features = ["derive"] }
 rayon = "1.8.0"
 regex = "1.9.5"
 reqwest = { version = "0.11.20", features = ["json", "cookies"] }
+scraper = "0.17.1"
 serde = { version = "1.0.188", features = ["serde_derive", "derive"] }
 serde_json = "1.0.107"
 strum = { version = "0.25.0", features = ["derive"] }
