--- a/lc_tui/Cargo.toml
+++ b/lc_tui/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 lc_lib = { path = "../lc_lib" }
 ratatui = { version = "0.23.0", features = ["all-widgets"] }
 crossterm = "0.27.0"
+html2text = "0.6.0"
 
 regex = { workspace = true }
 reqwest = { workspace = true, features = ["json", "cookies"] }
@@ -17,6 +18,3 @@ serde = { workspace = true, features = ["serde_derive", "derive"] }
 serde_json = { workspace = true }
 strum = { workspace = true, features = ["derive"] }
 tokio = { workspace = true, features = ["full"] }
-scraper = "0.17.1"
-ego-tree = "0.6.2"
-strfmt = "0.2.4"
