--- a/lc_tui/Cargo.toml
+++ b/lc_tui/Cargo.toml
@@ -18,3 +18,7 @@ serde = { workspace = true, features = ["serde_derive", "derive"] }
 serde_json = { workspace = true }
 strum = { workspace = true, features = ["derive"] }
 tokio = { workspace = true, features = ["full"] }
+image = "0.24.7"
+ratatui-image = { version = "0.3.0", features = ["crossterm"] }
+syntect = "5.1.0"
+syntect-tui = { git = "https://github.com/MickHarrigan/syntect-tui.git" }
