--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,4 @@ strum = { version = "0.25.0", features = ["derive"] }
 tokio = { version = "1.32.0", features = ["full"] }
 regex = "1.9.5"
 reqwest = { version = "0.11.20", features = ["json", "cookies"] }
+edit = { version = "0.1.4" }
