--- a/lc_tui/Cargo.toml
+++ b/lc_tui/Cargo.toml
@@ -18,6 +18,7 @@ serde = { workspace = true, features = ["serde_derive", "derive"] }
 serde_json = { workspace = true }
 strum = { workspace = true, features = ["derive"] }
 tokio = { workspace = true, features = ["full"] }
+edit = { workspace = true }
 image = "0.24.7"
 ratatui-image = { version = "0.3.0", features = ["crossterm"] }
 syntect = "5.1.0"
